:hammer: Building jlink runtime for distribution